public enum ActivityLevel
{
    Low,
    Medium,
    High
}